--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 :root {
   --clr-bg: #1c1c20;
+  --clr-bg-dark: #151518;
   --clr-bg-light: #2f2f36;
   --clr-input: #9494a3;
   --clr-primary: rgb(43, 203, 94);
   --clr-warning: #cba02b;
+  --clr-warning-dark: #83671c;
   --clr-primary-light: rgb(52, 240, 112);
   --clr-error: #af5d68;
 }
@@ -140,7 +142,6 @@ body {
 
 .content {
   flex: 1;
-  overflow: auto;
   padding-top: 3rem;
 }
 
@@ -178,4 +179,68 @@ h1 {
 .btn-secondary:hover {
   background-color: var(--clr-bg);
   color: var(--clr-input);
+}
+
+.mt-1 {
+  margin-top: 1rem;
+}
+
+.mt-2 {
+  margin-top: 2rem;
+}
+
+.mt-3 {
+  margin-top: 3rem;
+}
+
+.mt-4 {
+  margin-top: 4rem;
+}
+
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.mb-2 {
+  margin-bottom: 2rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.mb-4 {
+  margin-bottom: 4rem;
+}
+
+.pl-1 {
+  padding-left: 1rem;
+}
+
+.pl-2 {
+  padding-left: 2rem;
+}
+
+.pl-3 {
+  padding-left: 3rem;
+}
+
+.pl-4 {
+  padding-left: 4rem;
+}
+
+.pr-1 {
+  padding-right: 1rem;
+}
+
+.pr-2 {
+  padding-right: 2rem;
+}
+
+.pr-3 {
+  padding-right: 3rem;
+}
+
+.pr-4 {
+  padding-right: 4rem;
 }
