--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -30,11 +30,14 @@
   gap: 2rem;
 }
 
+.avatarWrapper {
+  position: relative;
+}
+
 .avatar {
   height: 2.5rem;
   width: 2.5rem;
   border-radius: 100vw;
-  overflow: hidden;
   cursor: pointer;
   display: flex;
   align-items: center;
