--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -16,6 +16,7 @@
   color: var(--clr-primary);
   margin: 0;
   line-height: 100%;
+  cursor: pointer;
 }
 
 .header > a {
@@ -45,4 +46,8 @@
   background-color: var(--clr-bg);
   font-weight: medium;
   color: var(--clr-primary);
+}
+
+.newIssueWrapper {
+  position: relative;
 }
